--- a/homework/hw4/index.html
+++ b/homework/hw4/index.html
@@ -12,7 +12,8 @@
         <label> Age:</label>
         <input type="number" id="personAge" />
         <button type="submit" id="addPersonBtn">Add Person</button>
-      </form>
+    </form>
+    <ul id="peopleList"></ul>
     <script src="index.js"></script>
 </body>
 </html>
