--- a/homework/hw4/index.html
+++ b/homework/hw4/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
         <label> Age:</label>
         <input type="number" id="personAge" />
         <button type="submit" id="addPersonBtn">Add Person</button>
+        <button type="button" id="clearPeopleBtn">Clear People</button>
     </form>
     <ul id="peopleList"></ul>
     <script src="index.js"></script>
